--- a/MDW_LOGS_REALTIME.ipynb
+++ b/MDW_LOGS_REALTIME.ipynb
@@ -682,7 +682,7 @@
         "id": "me3EWaLHBSFh",
         "outputId": "9560ac27-2995-4221-dca4-060054d75250"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,7 +754,38 @@
             "   📈 JVM: 73.6% | Resp: 175ms | ERROR: 0.2%\n",
             "\n",
             "📊 Log #20 | Anomalías: 0 | Alertas: 8\n",
-            "   📈 JVM: 89.8% | Resp: 1904ms | ERROR: 25.3%\n"
+            "   📈 JVM: 89.8% | Resp: 1904ms | ERROR: 25.3%\n",
+            "\n",
+            "📊 Log #30 | Anomalías: 0 | Alertas: 8\n",
+            "   📈 JVM: 85.4% | Resp: 1796ms | ERROR: 25.2%\n",
+            "\n",
+            "📊 Log #40 | Anomalías: 0 | Alertas: 8\n",
+            "   📈 JVM: 81.6% | Resp: 544ms | ERROR: 2.6%\n",
+            "\n",
+            "============================================================\n",
+            "📈 RESUMEN DE EJECUCIÓN\n",
+            "============================================================\n",
+            "\n",
+            "📊 ESTADÍSTICAS:\n",
+            "  • Duración: 20.1 segundos\n",
+            "  • Logs procesados: 41\n",
+            "  • Tasa: 2.0 logs/seg\n",
+            "  • Anomalías detectadas: 0\n",
+            "  • Alertas generadas: 8\n",
+            "\n",
+            "🤖 MODELO:\n",
+            "  • Entrenado: Sí\n",
+            "  • Datos entrenamiento: 40\n",
+            "\n",
+            "🚨 ÚLTIMAS ALERTAS:\n",
+            "  1. [08:52:51] CRITICAL: cpu_usage_percent = 90.5 (umbral: 90)\n",
+            "  2. [08:52:48] WARNING: error_rate_percent = 6.9 (umbral: 5)\n",
+            "  3. [08:52:44] CRITICAL: response_time_avg_ms = 1007.6 (umbral: 1\n",
+            "  4. [08:52:44] CRITICAL: jvm_heap_used_percent = 95.7 (umbral: 90\n",
+            "  5. [08:52:44] WARNING: cpu_usage_percent = 87.5 (umbral: 80)\n",
+            "💾 Modelo guardado en modelo_final.pkl\n",
+            "\n",
+            "✅ Sistema completado exitosamente!\n"
           ]
         }
       ]
